# datasciencetests

./: .gitignore  README.md
CatsAndDogs/: .gitignore  README.md  main.ipynb  pyproject.toml
CatsAndDogs/src/: default_box.py
CatsAndDogs/src/utils/: math.py  plotting.py  reshape.py  torch.py
CatsAndDogs/tests/: bounding_box.ipynb  default_box.ipynb  reshape.ipynb
imdb/: .env  .gitignore  baseline_analysis.ipynb  main.py  neural_analysis.ipynb  prepare_context_counts.ipynb  pyproject.toml
imdb/scripts/mlflow/: gc.py  start_server.py
imdb/src/: context_counter.py  data_handling.py  mlflow_setup.py  string_processing.py
imdb/src/neural_analysis/: dataset.py  dense.py  sparse.py
wiki_search/: .gitignore  links.html  main.py  parse_pages_from_xml.py  pyproject.toml  send_to_opensearch.py
wiki_search/opensearch/docker/: docker-compose.yml
wiki_search/opensearch/docs/: semantic_search_setup.md
wiki_search/src/: ansi.py  env.py  fifo.py  filesystem.py  opensearch.py  wiki_page.py
