[project]
name = "CatsAndDogs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TA", email = "aaltopi@gmail.com"},
]
dependencies = ["ipykernel>=6.29.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
