[project]
name = "CatsAndDogs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TA", email = "aaltopi@gmail.com"},
]
dependencies = ["ipykernel>=6.29.5", "torch>=2.5.1", "torchvision>=0.20.1", "matplotlib>=3.10.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
