[project]
name = "SentimentAnalysis"
version = "0.1.0"
description = "Simple sentiment analysis."
authors = [
    {name = "TA", email = "aaltopi@gmail.com"},
]
dependencies = [
    "nltk>=3.8.1",
    "ipython>=8.26.0",
    "ipykernel>=6.29.5",
    "pandas[performance, parquet]>=2.2.2",
    "pytest>=8.2.2",
    "torch>=2.4.0",
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "python-dotenv>=1.1.0",
    "tensorboard>=2.19.0",
    "standard-imghdr>=3.13.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pdm.scripts]
_.env_file = ".env"
